crates/general/fixtures/invalid/bracket_mismatch.zt
{ a = 1 ]

[ 1; 2; )

( 1, 2 ]

match x { _ => 1

if c then a

\x
